all record func done
